test/errors/leak_on_modify_self.sl
# expect: COMPERROR
auto fn = () -> none {
    self = () -> none {};
};

